--- a/智能数据处理平台/Communication/.project
+++ b/智能数据处理平台/Communication/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Dataset</name>
+	<name>Communication</name>
 	<comment></comment>
 	<projects>
 	</projects>
