--- a/智能数据处理平台/Neural_Network/.project
+++ b/智能数据处理平台/Neural_Network/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Nerual</name>
+	<name>Neural_Network</name>
 	<comment></comment>
 	<projects>
 	</projects>
